<resources>
    <string name="app_name">Solution Body Manager</string>
    <string name="Welcome_title">Welcome to Solution Body Manager</string>
    <string name="weclome_description">Since it’s your first time using this application, we would like to know you better beforehand</string>
    <string name="weclome_description2">The data you provide will serve to help us  make a suitable routine for you to reach your goal</string>
    <string name="weclome_description21">Let’s get started!</string>
    <string name="_630_kcal">630</string>
    <string name="_250_kcal">250</string>
    <string name="_58_kg">58 kg</string>
    <string name="_60_kg">60 kg</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="start">start</string>
    <string name="input_error_name">please enter your name :(</string>
    <string name="input_error_email">please enter your email :(</string>
    <string name="input_error_email_invalid">your email is wrong :(</string>
    <string name="input_error_password">please enter your password :(</string>
    <string name="input_error_password_length">kegampangen</string>
    <string name="input_confirm_false">Password not match :(</string>
    <string name="dont_have_account">Don\'t have a SBM account ? Sign up here !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu">Dashboard</string>
    <string name="ScanFood">Scan Food</string>
    <string name="Profile">Profile</string>
    <string name="log_in">Log In</string>
    <string name="scan_your_food_s_nutritional_value">Scan your food’s nutritional value</string>
    <string name="use_our_food_scanning_feature_to_check_up_on_your_daily_nutritional_intake">Use our food scanning feature to check up on your daily nutritional intake!</string>
    <string name="today">Today</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="calories_burned_today">Calories Burned Today</string>
    <string name="total">Total</string>
    <string name="_250_cal">250 Cal</string>
    <string name="fppd">Fppd</string>
    <string name="food">Food</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="snacks">Snacks</string>
    <string name="edit">Edit</string>
    <string name="john_doe">John Doe</string>
    <string name="jan_01_1999">Jan 01, 1999</string>
    <string name="male">Male</string>
    <string name="_166_cm">166 cm</string>
    <string name="search_for_food_or_restaurant">Search for food or restaurant</string>
    <string name="chicken_sandwich">Chicken Sandwich</string>
    <string name="_252_calories">252 Calories</string>
    <string name="serving_amount">Serving amount</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="_42_carbohidrate">42% Carbohidrate</string>
    <string name="confirm_permission">This app need to access files on your device.</string>
    <string name="confirm_camera">This app need to access camera on your device.</string>
    <string name="_42_carbohirates">42% Carbohirates</string>
    <string name="_24_fat">24% Fat</string>
    <string name="_34_protein">34% Protein</string>
    <string name="available_at">Available at</string>
    <string name="randy_s_restaurant">Randy\'s Restaurant</string>
    <string name="_0_5_km">0.5 km</string>
    <string name="mc_diddles">Mc\'Diddles</string>
    <string name="_0_7_km">0.7 km</string>
    <string name="amount_of_service">Amount of service</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="placeholder_tanggal">23 November 2019</string>
    <string name="placeholder_edit">Edit</string>
    <string name="titleMovie">Nasi Goreng</string>
    <string name="today_s_calorie_count">Today\'s Calorie Count</string>
    <string name="_580">580</string>
    <string name="slice">/</string>
    <string name="_2200">2200</string>
    <string name="calories">Calories</string>
    <string name="changes_plans">Change Plans</string>
    <string name="target_weight">Target Weight</string>
    <string name="_65">65</string>
    <string name="kg">Kg</string>
    <string name="Addfood">Add Food</string>
    <string name="Restaurant_HamishDaud">Hamish Daud Restaurant (0.5 km) </string>
    <string name="confirm">Confirm</string>
    <string name="food_scanned">Food Scanned</string>
    <string name="female">female</string>
    <string name="cancel">Cancel</string>
    <string name="enter_data">Enter Data</string>
    <string name="_255_cal">255 Cal</string>
    <string name="_30_minute">30 Minute</string>
    <string name="duration">Duration</string>
    <string name="_4_0_km">4.0 km</string>
    <string name="save">Save</string>
    <string name="distance">Distance</string>
    <string name="open_from_gallery">Open From Gallery</string>
    <string name="action_settings">Setting</string>

    <string-array name="kelamin">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Sign_Out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="pesan_obecity">It seems that you have consumed more calories than what your goal is. Do you want to change your calorie goal, or do some exercises?</string>
    <string name="breakfast_reminder">Breakfast Reminder</string>
    <string name="alarm_time">waktu_reminder</string>
    <string name="set_one_time_alarm">Set Reminder</string>
    <string name="reminder_setting">Setting</string>
    <string name="lunch_reminder">Lunch Reminder</string>
    <string name="dinner_reminder">Dinner Reminder</string>
    <string name="_4_0_m">0 meter</string>
</resources>
