<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recyclerView.DetailActivityFood"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_sandwich"
            android:textSize="19sp"
            android:textColor="#000"
            android:layout_gravity="center"/>
        <View
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="#BFBFBF"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_calorie_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_252_calories"
            android:textSize="19sp"
            android:textColor="#000"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="21dp">

            <ImageView
                android:layout_width="341.2dp"
                android:id="@+id/img_food"
                android:layout_height="194dp"
                android:background="@drawable/radius_corner"
                android:layout_gravity="center"
                 />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="21dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_amount"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="198dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macronutrients"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="198dp"
            android:layout_marginTop="11dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:src="@drawable/dotbiru"
                android:layout_marginEnd="11dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/carbo_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_42_carbohirates"
                android:textSize="14sp"
                android:textColor="#0075FF"
                android:layout_marginEnd="11dp"/>
            <ImageView
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:src="@drawable/dotijo"
                android:layout_marginEnd="11dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/tv_fat_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_fat"
                android:textSize="14sp"
                android:textColor="#FF8F50"
                android:layout_marginEnd="11dp"/>
            <ImageView
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:src="@drawable/dotorange"
                android:layout_marginEnd="11dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/tv_protein_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_34_protein"
                android:textSize="14sp"
                android:textColor="#49E201"
                android:layout_marginEnd="11dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_add_detail_food"
            android:layout_width="229dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/radius_burned_button"
            android:text="@string/Addfood"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BFBFBF"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_at"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginStart="35dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BFBFBF"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="11dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/randy_s_restaurant"
                    android:textSize="14sp"
                    android:textColor="#000"
                    android:layout_marginBottom="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_5_km"
                    android:textSize="14sp"
                    android:textColor="#5F5F5F"/>
            </LinearLayout>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:src="@drawable/arrow"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="209dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BFBFBF"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mc_diddles"
                    android:textSize="14sp"
                    android:textColor="#000"
                    android:layout_marginBottom="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_7_km"
                    android:textSize="14sp"
                    android:textColor="#5F5F5F"/>
            </LinearLayout>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:src="@drawable/arrow"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="261dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BFBFBF"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"/>
    </LinearLayout>
</RelativeLayout>