<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".imgProcessing.ScanDoneActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:src="@drawable/check"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_scanned"
            android:textColor="#373737"
            android:textSize="38sp"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BFBFBF"
            android:layout_marginTop="26dp"/>
        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_sandwich"
            android:textColor="#373737"
            android:textSize="19sp"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"/>
        <ImageView
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:src="@drawable/foodscaned"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"/>
        <TextView
            android:id="@+id/tv_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_252_calories"
            android:textColor="#373737"
            android:textSize="19sp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_confirm"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_burned_button"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginTop="40dp"/>
    </LinearLayout>


</RelativeLayout>